--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 
     <!-- ADD MEMBER TRIGGER -->
-    <a class="waves-effect waves-light btn modal-trigger" href="#add-member-modal">Add member</a>
+    <a class="waves-effect waves-light btn btn-large modal-trigger" href="#add-member-modal">Add member</a>
 
     <!-- ADD MEMBER MODAL -->
     <div id="add-member-modal" class="modal">
@@ -21,18 +21,6 @@
         <form id="add-member-form">
             <input type="text" name="firstName" placeholder="First name">
             <!-- <input type="email" name="email" placeholder="Email"> -->
-            <p>
-                <label for="is_parent">
-                    <input type="checkbox" id="is_parent" name="is_parent">
-                    <span>Are you a parent?</span>
-                </label>
-            </p>
-            <div class="input-field col s12">
-                    <select id="selectSpouse" style="display: block;">
-                        <option value="" disabled selected>Choose a spouse</option>
-                        <option value="">No spouse</option>
-                    </select>
-                </div>
             <button class=" btn-small">Add member</button>
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
         </form>
@@ -44,22 +32,19 @@
     <!-- EDIT MEMBER MODAL -->
     <div id="edit-member-modal" class="modal">
             <div class="modal-content">
-            <h4>Edit member</h4>
+            <h5>Edit member</h5>
             <form id="edit-member-form">
                 <input type="text" name="id" disabled>
                 <input type="text" name="firstName" placeholder="First name" required>
 
                 <div class="input-field col s12">
-                    <select id="selectSpouse" multiple>
+                    <select id="spouseSelect">
                       <option value="" disabled selected>Choose spouse</option>
-                      <option value="1">Option 1</option>
-                      <option value="2">Option 2</option>
-                      <option value="3">Option 3</option>
                     </select>
                     <label>Spouse</label>
                 </div>
 
-                <div class="input-field col s12">
+                <!-- <div class="input-field col s12">
                 <select id="selectSibling" multiple>
                     <option value="" disabled selected>Choose sibling</option>
                     <option value="1">Option 1</option>
@@ -67,9 +52,9 @@
                     <option value="3">Option 3</option>
                 </select>
                 <label>Siblings</label>
-                </div>
+                </div> -->
 
-                <div class="input-field col s12">
+                <!-- <div class="input-field col s12">
                 <select id="selectChildren" multiple>
                     <option value="" disabled selected>Choose children</option>
                     <option value="1">Option 1</option>
@@ -77,7 +62,7 @@
                     <option value="3">Option 3</option>
                 </select>
                 <label>Children</label>
-                </div>
+                </div> -->
 
                 <button class=" btn-small">Save changes</button>
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
@@ -133,26 +118,9 @@
     </div>
 
 
-     <!-- ADD FAMILY TRIGGER -->
-    <a class="waves-effect waves-light btn modal-trigger" href="#add-family-modal">Add family</a>
-
-    <!-- ADD FAMILY MODAL -->
-    <div id="add-family-modal" class="modal">
-        <div class="modal-content">
-            <h4>Add family</h4>
-            <form id="add-family-form">
-                    <input type="text" name="name" placeholder="Family name">
-                    <button class="btn-small">Add family</button>
-            </form>
-        </div>
-        <div class="modal-footer">
-        </div>
-    </div>
-
-
 
         <!-- <ul class="member__list collection"></ul> -->
-        <ul class="family__tree"></ul>
+        <div class="family__tree"></div>
 
         <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
