--- a/index.html
+++ b/index.html
@@ -15,8 +15,21 @@
             <div class="logged-in userEmail"></div>
             <button class="waves-effect waves-light btn-small logged-in" style="display: none;" id="signout-button">Sign out</button>
         </nav>
-        <div class="familyTree"></div>
-
+        <div class="contentContainer">
+            <div class="familyTree"></div>
+            <div class="profileInfo">
+                <div class="profileInfo__container">
+                    <button class="profileInfo__close"><i class="fa fa-times"></i></button>
+                    <div class="profileInfo__name">Name</div>
+                    <img class="profileInfo__image" src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=face-facial-hair-fine-looking-guy-614810.jpg&fm=jpg" alt="">
+                    <form id="edit-member-form">
+                        <input type="text" id="memberId" name="memberId" placeholder="memberId" disabled>
+                        <input type="text" id="name" name="name" placeholder="Name">
+                        <button class="btn-small">Save</button>
+                    </form>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col s4">
@@ -48,13 +61,12 @@
         <div id="edit-member-modal" class="modal">
             <div class="modal-content">
                 <h4>Edit member</h4>
-                <form id="edit-member-form">
+                <!-- <form id="edit-member-form">
                     <input type="text" id="memberId" name="memberId" placeholder="memberId" disabled>
                     <input type="text" id="name" name="name" placeholder="Name">
                     <button class="btn-small">Save</button>
                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
-                </form>
-                <button id="remove-member" class="btn-small red">Remove member</button>
+                </form> -->
             </div>
         </div>
 
