--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <input type="text" id="memberId" name="memberId" placeholder="memberId" disabled>
                         <input type="text" id="name" name="name" placeholder="Name">
                         <button class="btn-small">Save</button>
+                        <input type="file" name="profilePhoto">
                     </form>
                 </div>
             </div>
@@ -91,6 +92,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-functions.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-storage.js"></script>
 
 
     <script>
@@ -101,6 +103,7 @@
             databaseURL: "https://mily-4c2a8.firebaseio.com",
             projectId: "mily-4c2a8",
             messagingSenderId: "1885564039",
+            storageBucket: "mily-4c2a8.appspot.com",
             appId: "1:1885564039:web:c6027cccf72728f96fdc22",
             measurementId: "G-R4V33BYYZ4"
         };
@@ -111,6 +114,7 @@
         const auth = firebase.auth();
         const db = firebase.firestore();
         const functions = firebase.functions();
+        const storage = firebase.storage();
 
     </script>
 
