--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <input type="text" id="memberId" name="memberId" placeholder="memberId" disabled>
                         <input type="text" id="name" name="name" placeholder="Name">
                         <button class="btn-small">Save</button>
-                        <input type="file" name="profilePhoto">
+                        <input type="file" accept='image/*' name="profilePhoto">
                     </form>
                 </div>
             </div>
