--- a/public/index.html
+++ b/public/index.html
@@ -191,6 +191,7 @@
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="scripts/auth.js"></script>
+        <script src="scripts/routing.js"></script>
         <script src="scripts/index.js"></script>
         <script src='https://unpkg.com/panzoom@8.7.3/dist/panzoom.min.js'></script>
     </body>
