--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
                         <form id="edit-member-form" style="display: none">
                             <input type="text" id="memberId" name="memberId" placeholder="memberId" disabled>
                             <input type="text" id="name" name="name" placeholder="Name">
+                            <input type="text" id="lastName" name="lastName" placeholder="Last name">
+                            <input type="text" id="middleName" name="middleName" placeholder="Middle name">
+                            <input type="text" id="surname" name="surname" placeholder="Surname">
                             <input type="email" id="email" name="email" placeholder="Email">
                             <input type="date" id="birthday" name="birthday" placeholder="Birthday">
                             <label name=deceased>
@@ -80,7 +83,7 @@
                         </div>
                     </div>
                     <div class="profileInfo__footer">
-                        <button class="btn-small u-w_full">Save</button>
+                        <button id="edit-member-form-button" class="btn-small u-w_full">Save</button>
                     </div>
                 </div>
             </div>
