--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 </head>
     <body>
 
-
         <div class="contentContainer">
+            <div class="connectionLines"></div>
             <div class="mainContent">
                 <div class="navigation">
                     <div class="logged-in userEmail"></div>
@@ -199,5 +199,6 @@
         <script src="scripts/index.js"></script>
         <script src="scripts/routing.js"></script>
         <script src='https://unpkg.com/panzoom@8.7.3/dist/panzoom.min.js'></script>
+        <!-- <script src="scripts/leader-line.min.js"></script> -->
     </body>
 </html>
